@@ -30,10 +30,10 @@ was copied or cut.
 
 \wxheading{Remarks}
 
-These events are currently only generated by \helpref{wxComboBox}{wxcombobox} and
-under Windows and \helpref{wxTextCtrl}{wxtextctrl} under Windows and GTK and
-are not generated for the text controls with \texttt{wxTE\_RICH} style under
-Windows.
+These events are currently only generated by \helpref{wxTextCtrl}{wxtextctrl}
+under GTK. They are generated by all controls under Windows. (Prior to version
+2.8.8, only wxComboBox and wxTextCtrl without wxTE\_RICH style generated them
+under Windows.)
 
 
 \wxheading{Derived from}
