@@ -272,6 +272,8 @@ protected:
     int m_updatesCount;
 
 private:
+    void OnKeyDown(wxKeyEvent& event);
+
     DECLARE_EVENT_TABLE()
     DECLARE_DYNAMIC_CLASS_NO_COPY(wxTextCtrl)
 
